@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.22 2005/12/02 19:37:02 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/livecd_stage1_target.py,v 1.23 2005/12/02 20:09:03 wolf31o2 Exp $
 
 """
 Builder class for LiveCD stage1.
@@ -23,7 +23,7 @@ class livecd_stage1_target(generic_stage_target):
 					"config_profile_link","setup_confdir","portage_overlay",\
 					"bind","chroot_setup","setup_environment","build_packages",\
 					"unbind", "clean","clear_autoresume"]
-        def set_target_path(self):
+	def set_target_path(self):
 		self.settings["target_path"]=normpath(self.settings["storedir"]+"/builds/"+self.settings["target_subpath"])
 		if self.settings.has_key("AUTORESUME") \
 			and os.path.exists(self.settings["autoresume_path"]+"setup_target_path"):
@@ -45,8 +45,8 @@ class livecd_stage1_target(generic_stage_target):
 	                self.settings["spec_prefix"]="livecd"
 	
 	def set_use(self):
-		generic_stage_target.set_use(self)
-		self.settings["use"].append("livecd")
+	    generic_stage_target.set_use(self)
+	    self.settings["use"].append("livecd")
 
 	def set_packages(self):
 	    generic_stage_target.set_packages(self)
