@@ -1,6 +1,6 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.16 2005/12/02 19:37:02 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/modules/Attic/tinderbox_target.py,v 1.17 2005/12/02 20:09:03 wolf31o2 Exp $
 
 """
 builder class for the tinderbox target
@@ -21,14 +21,14 @@ class tinderbox_target(generic_stage_target):
 		# example call: "grp.sh run xmms vim sys-apps/gleep"
 		try:
 			if os.path.exists(self.settings["controller_file"]):
-				cmd("/bin/bash "+self.settings["controller_file"]+" run "+\
+			    cmd("/bin/bash "+self.settings["controller_file"]+" run "+\
 				list_bashify(self.settings["tinderbox/packages"]),"run script failed.")
 		
 		except CatalystError:
 			self.unbind()
 			raise CatalystError,"Tinderbox aborting due to error."
 
-        def set_pkgcache_path(self):
+	def set_pkgcache_path(self):
             if self.settings.has_key("pkgcache_path"):
                 if type(self.settings["pkgcache_path"]) != types.StringType:
                     self.settings["pkgcache_path"]=normpath(string.join(self.settings["pkgcache_path"]))
