@@ -1,5 +1,14 @@
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.418 2005/12/02 19:37:01 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.419 2005/12/02 20:09:03 wolf31o2 Exp $
+
+  02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org>
+  modules/catalyst_lock.py, modules/catalyst_support.py,
+  modules/embedded_target.py, modules/generic_stage_target.py,
+  modules/grp_target.py, modules/livecd_stage1_target.py,
+  modules/livecd_stage2_target.py, modules/netboot_target.py,
+  modules/stage1_target.py, modules/stage4_target.py,
+  modules/tinderbox_target.py:
+  So I was just kidding on that last commit.  This one is 2.0_rc4.
 
   02 Dec 2005; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
   modules/catalyst_lock.py, modules/catalyst_support.py,
